[gd_scene load_steps=6 format=2]

[ext_resource path="res://UI/PauseMenu.gd" type="Script" id=1]
[ext_resource path="res://Music and Sounds/Pause.wav" type="AudioStream" id=2]
[ext_resource path="res://Music and Sounds/Unpause.wav" type="AudioStream" id=3]
[ext_resource path="res://Music and Sounds/Menu Select.wav" type="AudioStream" id=4]
[ext_resource path="res://Music and Sounds/Menu Move.wav" type="AudioStream" id=5]

[node name="PauseMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="UnPauseSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="MenuMoveSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="MenuSelectSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="Overlay" type="ColorRect" parent="."]
modulate = Color( 0, 0, 0, 0.658824 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.196078 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -25.0
margin_top = 22.0
margin_right = 25.0
margin_bottom = 36.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "Paused!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -38.5
margin_top = -34.0
margin_right = 38.5
margin_bottom = 34.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResumeButton" type="Button" parent="Menu"]
margin_right = 77.0
margin_bottom = 20.0
size_flags_vertical = 4
text = "Resume"

[node name="RestartButton" type="Button" parent="Menu"]
margin_top = 24.0
margin_right = 77.0
margin_bottom = 44.0
size_flags_vertical = 4
text = "Restart"

[node name="ExitButton" type="Button" parent="Menu"]
margin_top = 48.0
margin_right = 77.0
margin_bottom = 68.0
size_flags_vertical = 4
text = "End Game"

[node name="DieTimeout" type="Timer" parent="."]
wait_time = 0.6
[connection signal="finished" from="MenuSelectSound" to="." method="_on_MenuSelectSound_finished"]
[connection signal="pressed" from="Menu/ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="Menu/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="Menu/ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="timeout" from="DieTimeout" to="." method="_on_DieTimeout_timeout"]
